unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/CMPL123TMS__TMS_App_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>TMS App Settings</description>
    <label>TMS App Settings</label>
</CustomObject>