unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Allow_Adhoc_Assignment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Allow_Adhoc_Assignment__c</fullName>
        <description>Allow Adhoc Assignment</description>
        <inlineHelpText>Allow Adhoc Assignment</inlineHelpText>
        <label>Allow Adhoc Assignment</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>