unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Available__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Available__c</fullName>
        <description>Employee Status1</description>
        <inlineHelpText>Employee Status1</inlineHelpText>
        <label>Employee Status Available</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>