unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Away__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Away__c</fullName>
        <description>Employee Status Away</description>
        <inlineHelpText>Employee Status Away</inlineHelpText>
        <label>Employee Status Away</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>