unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Email_Template_Folder_Unique_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Email_Template_Folder_Unique_Name__c</fullName>
        <description>It stores the email template folder unique name</description>
        <inlineHelpText>It stores the email template folder unique name</inlineHelpText>
        <label>Email Template Folder Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>