unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Is_Instructor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Instructor</label>
        <type>Checkbox</type>
    </CustomField>