unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Lightning_Domain__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Lightning_Domain__c</fullName>
        <description>Lightning Domain</description>
        <inlineHelpText>Lightning Domain</inlineHelpText>
        <label>Lightning Domain</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>