unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Logo__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Logo__c</fullName>
        <description>Require Document Unique Name</description>
        <inlineHelpText>Update the Document Unique Name in this field</inlineHelpText>
        <label>Logo</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>