unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__New_Hire_Training_Days__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__New_Hire_Training_Days__c</fullName>
        <description>New Hire Training Days controls training record due date assignment</description>
        <inlineHelpText>New Hire Training Days controls training record due date assignment</inlineHelpText>
        <label>New Hire Training Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>