unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__Training_Grace_Period__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Grace_Period__c</fullName>
        <description>The period that employee is considered a new hire</description>
        <inlineHelpText>The period that employee is considered a new hire</inlineHelpText>
        <label>Training Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>