unpackaged/main/default/objects/CMPL123TMS__TMS_App_Settings__c/fields/CMPL123TMS__User_Support__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__User_Support__c</fullName>
        <description>User Support</description>
        <inlineHelpText>User Support</inlineHelpText>
        <label>User Support</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>